--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "aws-serverless-express": "^3.4.0",
     "express": "^4.21.2",
     "serverless": "^4.9.1"
+  },
+  "devDependencies": {
+    "serverless-deployment-bucket": "^1.6.0",
+    "serverless-offline": "^14.4.0",
+    "serverless-prune-plugin": "^2.1.0"
   }
 }
